# brief

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  book.toml  brief-phase2-plan.md  brief.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
briefc/: Cargo.toml
briefc/src/: ast.rs  audit.rs  checker.rs  ci.rs  codegen.rs  doc.rs  enforcer.rs  errors.rs  fmt.rs  gen.rs  hir.rs  init.rs  lexer.rs  lock.rs  lsp.rs  main.rs  manifest.rs  mcp_schema.rs  models.rs  parser.rs  policy_check.rs  policy_suggest.rs  registry.rs  repl.rs  runner.rs  selfhosting.rs  serve.rs  skill_backends.rs  skill_loader.rs  skillgen.rs  skillsync.rs  suggest.rs  tester.rs  typeck.rs  verifier.rs  verify.rs  watch.rs
compiler/: 01-lex-pass.brief  02-parse-pass.brief  03-check-pass.brief  04-fmt-pass.brief  05-hir-pass.brief  06-pipeline.brief  briefcore-spec.md
docs/: claude-code-integration.md  diagrams.md  editor-setup.md  getting-started.md  language-spec.md  llvm-setup.md  self-hosting.md  similar-projects.md
examples/: 01-hello.brief  02-profile-screen.brief  02-review-pr.brief  03-domain-model.brief  04-mapper.brief  05-effect-definition.brief  06-auth-login.brief  07-notifications.brief  08-onboarding.brief  09-settings.brief  10-data-sync.brief  11-ai-chat.brief  12-sealed-types.brief  13-feature-flags.brief  14-test-suite.brief  15-checkout-flow.brief  16-analytics.brief  17-localization.brief  18-upload-pipeline.brief  19-otp-verification.brief  20-search-filters.brief  21-error-recovery.brief  22-permissions.brief  23-linear-types.brief  24-type-aliases.brief  25-effect-groups.brief  26-brief-doc.brief  (+21 more)
(+101 files in other folders)
