[package]
name = "briefc"
version = "0.1.0"
edition = "2021"
authors = ["Brief Contributors"]
description = "The Brief language compiler and toolchain"
repository = "https://github.com/yourusername/brief"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "brief"
path = "src/main.rs"

[dependencies]
logos    = "0.14"
clap     = { version = "4", features = ["derive"] }
colored  = "2"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
