[package]
name = "briefc"
version = "1.0.0"
edition = "2021"
authors = ["Brief Contributors"]
description = "The Brief language compiler and toolchain"
repository = "https://github.com/yourusername/brief"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "brief"
path = "src/main.rs"

[dependencies]
logos      = "0.14"
clap       = { version = "4", features = ["derive"] }
clap_complete = "4"
colored    = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
hex        = "0.4"
ureq       = { version = "2", features = ["json"] }
tower-lsp  = "0.20"
tokio      = { version = "1", features = ["full"] }
notify     = { version = "6", features = ["macos_kqueue"] }
toml       = { version = "0.8", features = ["parse"] }

# Optional: LLVM backend (requires `brew install llvm@18` or equivalent)
# Enable with: cargo build --features llvm-backend
# Set BRIEF_CLANG to the clang binary path if not on PATH.
# See docs/llvm-setup.md for full instructions.

[features]
llvm-backend = []

[dev-dependencies]
tempfile = "3"
